--- a/execicios/ex022/fundo06.html
+++ b/execicios/ex022/fundo06.html
@@ -16,12 +16,17 @@
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: solid 1px black;
             border-radius: 20px;
         }
+        /*
+        Shorthand - background
+        color > image > position > repeat > size > attachment 
+        
+        */
     </style>
 </head>
 <body>
